--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TerraVision 360 - Real Estate Demo</title>
+    <title>TerraVision 360 - Eco Estate</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,400;500;700&display=swap" rel="stylesheet">
     <style>
-      body { font-family: 'Inter', sans-serif; margin: 0; overflow: hidden; background-color: #111; color: white; }
+      body { font-family: 'DM Sans', sans-serif; margin: 0; overflow: hidden; background-color: #F5F5F4; color: #1c1917; }
       #root { width: 100vw; height: 100vh; }
     </style>
   <script type="importmap">
